ci: conflict sebastian/comparator (#6032)
* ci: conflict sebastian/comparator

* for lowest

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
             "ApiPlatform\\Validator\\": ""
         }
     },
+    "conflict": {
+        "sebastian/comparator": ">=5.0"
+    },
     "config": {
         "preferred-install": {
             "*": "dist"
