chore: components dependencies (#6113)
* chore: components dependencies

* test

--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,17 @@
     ],
     "require": {
         "php": ">=8.1",
-        "api-platform/metadata": "*@dev || ^3.1"
+        "api-platform/metadata": "*@dev || ^3.1",
+        "api-platform/jsonld": "*@dev || ^3.1",
+        "symfony/web-link": "^6.4 || ^7.0"
     },
     "require-dev": {
         "phpspec/prophecy-phpunit": "^2.0",
-        "symfony/phpunit-bridge": "^6.1",
-        "sebastian/comparator": "<5.0"
+        "symfony/phpunit-bridge": "^6.4 || ^7.0",
+        "symfony/serializer": "^6.4 || ^7.0",
+        "sebastian/comparator": "<5.0",
+        "symfony/validator": "^6.4 || ^7.0",
+        "symfony/http-kernel": "^6.4 || ^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -48,7 +53,7 @@
             "dev-main": "3.2.x-dev"
         },
         "symfony": {
-            "require": "^6.1"
+            "require": "^6.4"
         }
     },
     "repositories": [
