--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": ">=8.1",
         "api-platform/metadata": "*@dev || ^3.1",
-        "symfony/web-link": "^6.4 || ^7.0"
+        "symfony/web-link": "^6.4 || ^7.1"
     },
     "require-dev": {
         "phpspec/prophecy-phpunit": "^2.0",
@@ -49,10 +49,11 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "3.3.x-dev"
+            "dev-main": "4.0.x-dev",
+            "dev-3.4": "3.4.x-dev"
         },
         "symfony": {
-            "require": "^6.4"
+            "require": "^6.4 || ^7.1"
         }
     },
     "scripts": {
