--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     ],
     "require": {
         "php": ">=8.1",
-        "api-platform/metadata": "*@dev || ^3.2 || ^4.0",
+        "api-platform/metadata": "@dev || ^3.2 || ^4.0",
         "symfony/web-link": "^6.4 || ^7.1"
     },
     "require-dev": {
-        "phpspec/prophecy-phpunit": "^2.0",
+        "phpspec/prophecy-phpunit": "^2.2",
         "symfony/phpunit-bridge": "^6.4 || ^7.0",
         "symfony/serializer": "^6.4 || ^7.0",
-        "symfony/validator": "^6.4 || ^7.0",
+        "symfony/validator": "^6.4 || ^7.1",
         "symfony/http-kernel": "^6.4 || ^7.0"
     },
     "autoload": {
