--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "api-platform/metadata": "^3.1",
+        "api-platform/metadata": "^3.4 || ^4.0",
         "symfony/web-link": "^6.4 || ^7.1"
     },
     "require-dev": {
