--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require-dev": {
         "phpspec/prophecy-phpunit": "^2.2",
         "symfony/serializer": "^6.4 || ^7.0",
-        "phpunit/phpunit": "^11.2",
+        "phpunit/phpunit": "11.5.x-dev",
         "symfony/validator": "^6.4 || ^7.0",
         "symfony/http-kernel": "^6.4 || ^7.0"
     },
@@ -63,5 +63,11 @@
     },
     "scripts": {
         "test": "./vendor/bin/phpunit"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/soyuka/phpunit"
+        }
+    ]
 }
