chore: symfony/type-info 7.3.0-BETA1

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "phpunit/phpunit": "11.5.x-dev",
         "symfony/validator": "^6.4 || ^7.0",
         "symfony/http-kernel": "^6.4 || ^7.0",
-        "symfony/type-info": "^7.3-dev"
+        "symfony/type-info": "v7.3.0-BETA1"
     },
     "autoload": {
         "psr-4": {
@@ -66,10 +66,6 @@
         "test": "./vendor/bin/phpunit"
     },
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/symfony/type-info"
-        },
         {
             "type": "vcs",
             "url": "https://github.com/soyuka/phpunit"
