--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "require": {
         "php": ">=8.2",
         "api-platform/metadata": "^4.1",
+        "symfony/type-info": "^7.2",
         "symfony/web-link": "^6.4 || ^7.1"
     },
     "require-dev": {
