chore: support symfony 8 (#7561)

--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
     "require": {
         "php": ">=8.2",
         "api-platform/metadata": "^4.2",
-        "symfony/type-info": "^7.3",
-        "symfony/http-kernel": "^6.4 || ^7.1",
-        "symfony/serializer": "^6.4 || ^7.1",
-        "symfony/validator": "^6.4.11 || ^7.1",
-        "symfony/web-link": "^6.4 || ^7.1"
+        "symfony/type-info": "^7.3 || ^8.0",
+        "symfony/http-kernel": "^6.4 || ^7.1 || ^8.0",
+        "symfony/serializer": "^6.4 || ^7.1 || ^8.0",
+        "symfony/validator": "^6.4.11 || ^7.1 || ^8.0",
+        "symfony/web-link": "^6.4 || ^7.1 || ^8.0"
     },
     "require-dev": {
         "phpspec/prophecy-phpunit": "^2.2",
@@ -57,7 +57,7 @@
             "dev-4.1": "4.1.x-dev"
         },
         "symfony": {
-            "require": "^6.4 || ^7.0"
+            "require": "^6.4 || ^7.0 || ^8.0"
         },
         "thanks": {
             "name": "api-platform/api-platform",
